--- a/src/scss/core/extra/extra.scss
+++ b/src/scss/core/extra/extra.scss
@@ -255,7 +255,7 @@ label {
 .error-box {
     height: 100%;
     position: fixed;
-    background: url(../../../../assets/images/background/error-bg.jpg) no-repeat center center #fff;
+    background: url(../../assets/images/background/error-bg.jpg) no-repeat center center #fff;
     width: 100%;
     .error-body {
         padding-top: 5%;
