--- a/src/scss/bootstrap/mixins/_text-hide.scss
+++ b/src/scss/bootstrap/mixins/_text-hide.scss
@@ -1,5 +1,5 @@
 // CSS image replacement
-@mixin text-hide() {
+@mixin text-hide($ignore-warning: false) {
   // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
   font: 0/0 a;
   color: transparent;
@@ -7,4 +7,5 @@
   background-color: transparent;
   border: 0;
 
+  @include deprecate("`text-hide()`", "v4.1.0", "v5", $ignore-warning);
 }
