--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@ File: scss
 
 //In This scss you can write your scss
 @import "custom";
+@import "landingpage";
 
 //This is for the icons (Required file)
 @import "icons/font-awesome/css/fontawesome-all.css";
