--- a/src/scss/_landingpage.scss
+++ b/src/scss/_landingpage.scss
@@ -57,6 +57,20 @@
   line-height: 37px;
   font-size: 15px;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+.icon-circle {
+  width: 10px;
+  height: 10px;
+  background-color: $text-muted;
+  border-radius: 50%;
+  display: block;
+  margin-right: 8px;
+  &.info {
+    background-color: $cyan;
+  }
 }
 
 .font-15 {
@@ -75,40 +89,48 @@
 }
 
 .custom-carousel {
-    .carousel-indicators {
-        bottom: 50%;
-        li {
-            height: 10px;
-            width: 10px;
-            border-radius: 100%;
-            background-color: $blue;
-        }
+  .carousel-indicators {
+    bottom: 50%;
+    li {
+      height: 10px;
+      width: 10px;
+      border-radius: 100%;
+      background-color: $blue;
     }
-    .carousel-control-next {
-        right: -45px;
-    }
-    .carousel-control-prev {
-        left: -45px;
-    }
-    .carousel-control-next, .carousel-control-prev {
-        top: 22%;
-        width: 40px;
-        opacity: 0.7;
-        height: 40px;
-        background: $blue;
-        border-radius: 50%;
-        font-size: 26px;
-    }
+  }
+  .carousel-control-next {
+    right: -45px;
+  }
+  .carousel-control-prev {
+    left: -45px;
+  }
+  .carousel-control-next,
+  .carousel-control-prev {
+    top: 22%;
+    width: 40px;
+    opacity: 0.7;
+    height: 40px;
+    background: $blue;
+    border-radius: 50%;
+    font-size: 26px;
+  }
+  .carousel-control-next-icon,
+  .carousel-control-prev-icon {
+    margin-top: 10px;
+    width: 25px;
+    height: 25px;
+  }
 }
 
-@media(max-width: 767px) {
-    .custom-carousel .carousel-control-next, .custom-carousel .carousel-control-prev {
-        top: 15%;
-    }
-    .custom-carousel .carousel-control-next {
-        right: -19px;
-    }
-    .custom-carousel .carousel-control-prev {
-        left: -19px;
-    }
+@media (max-width: 767px) {
+  .custom-carousel .carousel-control-next,
+  .custom-carousel .carousel-control-prev {
+    top: 15%;
+  }
+  .custom-carousel .carousel-control-next {
+    right: -19px;
+  }
+  .custom-carousel .carousel-control-prev {
+    left: -19px;
+  }
 }
